General file name fixing, modified spacing for video on smaller screens

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -64,7 +64,7 @@ header{
 .hero-image{
     min-height: 400px;
     width: 100%;
-    background-image: url("../images/pexels-igor-ovsyannykov-205961.jpg");
+    background-image: url("../images/donut-store-counter.jpg");
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
@@ -105,7 +105,7 @@ main{
     width: 100%;
     margin: 20px;
     box-shadow: 10px 10px rgba(255, 175, 190);
-    background-image: url("../images/pexels-jeswin-thomas-5570880.jpg");
+    background-image: url("../images/donuts-icecream-events.jpg");
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
@@ -117,7 +117,7 @@ main{
     width: 100%;
     margin: 20px;
     box-shadow: 10px 10px rgba(255, 175, 190);
-    background-image: url("../images/pexels-vaibhav-jadhav-3218467.jpg");
+    background-image: url("../images/kitchen-baker.jpg");
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
@@ -238,7 +238,7 @@ footer{
     display: block;
 }
 .hero-video-container{
-    margin: 20px 0px 20px;
+    margin-bottom: 20px;
 }
 .single-donut-image{
     min-height: 200px;
@@ -325,7 +325,7 @@ footer{
         height: 250px;
         width: 100%;
         margin: 10px 0px 10px;
-        background-image: url("../images/pexels-vaibhav-jadhav-3218467.jpg");
+        background-image: url("../images/kitchen-baker.jpg");
         background-position: center;
         background-repeat: no-repeat;
         background-size: cover;
@@ -335,7 +335,7 @@ footer{
         height: 250px;
         width: 100%;
         margin: 10px 0px 10px;
-        background-image: url("../images/pexels-jeswin-thomas-5570880.jpg");
+        background-image: url("../images/donuts-icecream-events.jpg");
         background-position: center;
         background-repeat: no-repeat;
         background-size: cover;
@@ -353,9 +353,9 @@ footer{
         color:  snow;
         text-shadow:2px 2px slategray;
     }
-    .event-anchor{
+    /* .event-anchor{
         color: blue;
-    }
+    } */
     .single-donut-image{
         min-height: 200px;
         width: 80%; 
